// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Header for route / 1`] = `

<div class="flex h-16 w-full cursor-default items-center justify-between gap-7 bg-sidebar py-3 pl-[1.4rem] pr-4">
  <gui-vlt-icon
    classname="hidden md:flex"
    size="24"
  >
  </gui-vlt-icon>
  <div class="flex w-full">
    <gui-dashboard-header>
    </gui-dashboard-header>
  </div>
  <gui-linear-menu>
  </gui-linear-menu>
</div>

`;

exports[`renders Header for route /explore 1`] = `

<div class="flex h-16 w-full cursor-default items-center justify-between gap-7 bg-sidebar py-3 pl-[1.4rem] pr-4">
  <gui-vlt-icon
    classname="hidden md:flex"
    size="24"
  >
  </gui-vlt-icon>
  <div class="flex w-full">
    <gui-explorer-header>
    </gui-explorer-header>
  </div>
  <gui-linear-menu>
  </gui-linear-menu>
</div>

`;

exports[`renders Header for route /help 1`] = `

<div class="flex h-16 w-full cursor-default items-center justify-between gap-7 bg-sidebar py-3 pl-[1.4rem] pr-4">
  <gui-vlt-icon
    classname="hidden md:flex"
    size="24"
  >
  </gui-vlt-icon>
  <div class="flex w-full">
    <gui-help-header>
    </gui-help-header>
  </div>
  <gui-linear-menu>
  </gui-linear-menu>
</div>

`;

exports[`renders Header for route /labels 1`] = `

<div class="flex h-16 w-full cursor-default items-center justify-between gap-7 bg-sidebar py-3 pl-[1.4rem] pr-4">
  <gui-vlt-icon
    classname="hidden md:flex"
    size="24"
  >
  </gui-vlt-icon>
  <div class="flex w-full">
    <gui-labels-header>
    </gui-labels-header>
  </div>
  <gui-linear-menu>
  </gui-linear-menu>
</div>

`;

exports[`renders Header for route /queries 1`] = `

<div class="flex h-16 w-full cursor-default items-center justify-between gap-7 bg-sidebar py-3 pl-[1.4rem] pr-4">
  <gui-vlt-icon
    classname="hidden md:flex"
    size="24"
  >
  </gui-vlt-icon>
  <div class="flex w-full">
    <gui-queries-header>
    </gui-queries-header>
  </div>
  <gui-linear-menu>
  </gui-linear-menu>
</div>

`;
